sandbox/output
ProfitDeduplicate.java:45: error: cannot find symbol
            logger.severe("Work was interrupted. Exception message: " + 
            ^
  symbol:   variable logger
  location: class ProfitDeduplicate
ProfitGeneralize.java:45: error: cannot find symbol
            logger.severe("Work was interrupted. Exception message: " + 
            ^
  symbol:   variable logger
  location: class ProfitGeneralize
ProfitNaive.java:59: error: cannot find symbol
        logger.severe("Work was interrupted. Exception message: " + 
        ^
  symbol:   variable logger
  location: class ProfitNaive
3 errors
